updated dynamic array implementation

--- a/dynamic_array_implementation.ipynb
+++ b/dynamic_array_implementation.ipynb
@@ -1,63 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class M(object):\n",
-    "    def public(self):\n",
-    "        print (\"Use Tab to see me!\")\n",
-    "    \n",
-    "    def _private(self):\n",
-    "        print (\"You won't be able to Tab to see me!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m = M()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You won't be able to Tab to see me!\n"
-     ]
-    }
-   ],
-   "source": [
-    "m._private()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Use Tab to see me!\n"
-     ]
-    }
-   ],
-   "source": [
-    "m.public()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -263,22 +206,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'b^e6UwfDWGiF9aVTD3kOnH+r7WnYbC%n'"
+       "'q)DYVMsr5s)kW)%jDcl)c6Hwhf*%2iuA'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr[20]"
+    "arr[999]"
    ]
   },
   {
